--- a/src/main/resources/m06uf4practd_client/m06uf4practd_client/hall.fxml
+++ b/src/main/resources/m06uf4practd_client/m06uf4practd_client/hall.fxml
@@ -199,12 +199,12 @@
                                                 <Image url="@../../images/avatar.png" />
                                              </image>
                                           </ImageView>
-                                          <ImageView id="icona-mini-premi" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" translateX="35.0" translateY="35.0">
+                                          <ImageView id="icona-mini-premi" fx:id="icona_posicio" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" translateX="35.0" translateY="35.0">
                                              <image>
                                                 <Image url="@../../images/prize.png" />
                                              </image>
                                           </ImageView>
-                                          <Label fx:id="label_posicio" alignment="CENTER" prefHeight="22.0" prefWidth="22.0" styleClass="ranking-label-txt-posicio" text="99" textAlignment="CENTER" translateX="44.0" translateY="44.0" />
+                                          <Label fx:id="label_posicio" alignment="CENTER" prefHeight="22.0" prefWidth="22.0" styleClass="ranking-label-txt-posicio" text="?" textAlignment="CENTER" translateX="44.0" translateY="44.0" />
                                        </children>
                                        <HBox.margin>
                                           <Insets right="10.0" />
