--- a/src/main/resources/m06uf4practd_client/m06uf4practd_client/joc.fxml
+++ b/src/main/resources/m06uf4practd_client/m06uf4practd_client/joc.fxml
@@ -14,7 +14,7 @@
 
 <ScrollPane fx:id="pagina" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" minHeight="-Infinity" minWidth="-Infinity" pannable="true" prefHeight="600.0" prefWidth="850.0" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="m06uf4practd_client.m06uf4practd_client.JocController">
     <content>
-        <BorderPane>
+        <BorderPane styleClass="bg-mig">
             <top>
                 <GridPane id="container_top" alignment="TOP_CENTER">
                     <columnConstraints>
